--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -4,14 +4,27 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
 	
-	<servlet>
-		<servlet-name>spring-webservice</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>spring-webservice</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
+	<display-name>cxf</display-name> 
+    <description>cxf</description> 
+    <servlet> 
+        <description>Apache CXF Endpoint</description> 
+        <servlet-name>cxf</servlet-name> 
+        <servlet-class> 
+            org.apache.cxf.transport.servlet.CXFServlet 
+        </servlet-class> 
+        <load-on-startup>1</load-on-startup> 
+    </servlet>
+    <servlet-mapping> 
+        <servlet-name>cxf</servlet-name> 
+        <url-pattern>/services/*</url-pattern> 
+    </servlet-mapping> 
+    <session-config> 
+        <session-timeout>60</session-timeout> 
+    </session-config>
+    <listener> 
+        <listener-class> 
+            org.springframework.web.context.ContextLoaderListener 
+        </listener-class> 
+    </listener>
 	
 </web-app>
